# dvc-mlops-workflow

./: .gitignore  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  data_desc.txt  external.dvc
data/processed/: .gitignore
dev/: eda.ipynb  model-dev.ipynb
dev/.ipynb_checkpoints/: eda-checkpoint.ipynb
ml_dev/: data_reader.py  evaluate.py  feature_selection.py  preprocessing.py  train.py
ml_dev/utils/: yaml_reader.py
