[tool.poetry]
name = "ml-dev"
version = "0.1.0"
description = "Creating and Experimenting Machine Learning Development Environment Using Set of Different py Packages."
authors = ["Ezzaldin97 <kingtal632@yahoo.com>"]
readme = "README.md"
packages = [{include = "ml_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
scikit-learn = "^1.3.0"
lightgbm = "^3.3.2"
hyperopt = "^0.2.5"
dvc = "^3.13.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
statsmodels = "^0.13.0"
pyarrow = "^12.0.0"
dvc-gdrive = "^2.19.0"


[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
